apps/homarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:0.14.2
        ports:
        - name: http
          containerPort: 7575
          protocol: TCP
        volumeMounts:
          - name: storage
            mountPath: /app/data/configs
            subPath: configs
          - name: storage
            mountPath: /app/public/icons
            subPath: icons
          - name: storage
            mountPath: /data
            subPath: data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: homarr
