apps/homarr/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homarr
  name: homarr
spec:
  type: ClusterIP
  ports:
  - port: 7575
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: homarr
